Animate footer expand/hide on mobile (Resolves #6)

--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@ body {
 
   footer #footer-expand-up {
     display: flex;
+    font-size: 1.5rem;
   }
 
   #footer {
